<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_main"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_main" />

    <item
        android:id="@+id/navigation_our_services"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_our_services" />

    <item
        android:id="@+id/navigation_about_us"
        android:icon="@drawable/ic_speaker_notes_black_24dp"
        android:title="@string/title_about_us" />

    <item
        android:id="@+id/navigation_contact_us"
        android:icon="@drawable/ic_contact_mail_black_24dp"
        android:title="@string/title_contact_us" />

    <item
        android:id="@+id/navigation_other_services"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_other_services" />



</menu>
